--- a/webpack-dev-server/index.html
+++ b/webpack-dev-server/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hot Module Replacement Plugin</title>
 </head>
 <body>
-  <h1>Webpack con Platzi!</h1>
 </body>
 </html>
